package this.is.not.used;

option java_package = "net.jarlehansen.protobuf.javame.generated";
option java_outer_classname = "this.is.not.used";

message ListTestObject {
	repeated int32 one = 1;
	repeated int64 two = 2;
	repeated double three = 3;
	repeated string four = 4;
	repeated bytes five = 5;
	repeated float six = 6;
	repeated bool seven = 7;
}